# zorite

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  THIRD-PARTY-LICENSES.html  TODO.md  about.toml  build.rs  deny.toml  flake.nix
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: actionlint.yml  after_release.yml  ci.yml  docs.yml  nix.yml  release.yml
assets/cursors/Bibata-Catppuccin-Mocha/: index.theme
assets/cursors/Bibata-Catppuccin-Mocha/cursors/: alias  context-menu  copy  crosshair  default  e-resize  ew-resize  grab  grabbing  n-resize  nesw-resize  not-allowed  ns-resize  nwse-resize  pointer  s-resize  text  vertical-text  w-resize
crates/gpui-editor/: API.md  Cargo.toml  README.md
crates/gpui-editor/examples/: demo.rs
crates/gpui-editor/src/: element.rs  lib.rs  markdown_syntax.rs  tables.rs
crates/gpui-markdown/: API.md  Cargo.toml  README.md  sample.md
crates/gpui-markdown/src/: lib.rs  syntax.rs  view.rs
crates/gpui-pdf/: API.md  Cargo.toml  README.md
crates/gpui-pdf/examples/: dump_outline.rs  extract_text.rs  forms_check.rs
crates/gpui-pdf/src/: forms.rs  lib.rs  outline.rs  text.rs
crates/gpui-whiteboard/: API.md  Cargo.toml  README.md
crates/gpui-whiteboard/src/: font.rs  geometry.rs  input.rs  lib.rs  paint.rs  render_perf.rs  scene.rs
crates/os-cursors/: API.md  Cargo.toml  README.md
crates/os-cursors/src/: lib.rs  linux.rs  macos.rs  windows.rs  xcursor.rs
crates/os-spellcheck/: API.md  Cargo.toml  README.md
crates/os-spellcheck/src/: lib.rs  windows.rs
crates/ratex-gpui/: API.md  Cargo.toml  README.md
crates/ratex-gpui/examples/: editor.rs
crates/ratex-gpui/src/: lib.rs  render.rs
crates/ratex-gpui/src/editor/: cursor.rs  geometry.rs  input.rs  latex.rs  mod.rs  model.rs  view.rs
crates/spellcheck/: Cargo.toml  README.md
crates/spellcheck/src/: macos.rs
docs/: .gitignore  astro.config.mjs  icons.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  printing.md  whiteboard-architecture.md
docs/public/: robots.txt
docs/scripts/: build-og-image.mjs  sync-changelog.mjs  sync-crate-readmes.mjs
docs/src/components/: Hero.astro  SocialIcons.astro
docs/src/content/docs/: 404.mdx  index.mdx  install.md
docs/src/content/docs/customize/: cursors.md  themes.md
docs/src/content/docs/reference/: icons.md  requirements.md
docs/src/content/docs/usage/: import.md  journal.md  math.md  navigate.md  notebooks.md  pdf.md  search.md  security.md  shortcuts.md  whiteboards.md
docs/src/styles/: theme.css
nixpkgs-staging/: package.nix
packaging/linux/: zorite.desktop
packaging/windows/winget/: packetThrower.Zorite.installer.yaml.template  packetThrower.Zorite.locale.en-US.yaml  packetThrower.Zorite.yaml.template
packaging/windows/wix/: main.wxs
resources/: Info.plist  icon.rc
resources/icons/: icon.icns
scripts/: fetch-lucide.sh  gen_perf_db.py
spikes/ratex-probe/: Cargo.toml  DESIGN.md  FINDINGS.md
spikes/ratex-probe/src/: main.rs
src/: actions.rs  app.rs  clipboard.rs  cursors.rs  dates.rs  db.rs  export.rs  export_md.rs  hierarchy.rs  highlight.rs  images.rs  main.rs  math.rs  mentions.rs  mermaid.rs  migration.rs  models.rs  paths.rs  pdf.rs  search.rs  security.rs  settings.rs  skins.rs  slash.rs  theme.rs  unlock.rs  updater.rs  whiteboard.rs
src/app/: blockrefs.rs  dialogs.rs  find.rs  importing.rs  math.rs  persistence.rs  stores.rs
src/import/: edn.rs  logseq.rs  mod.rs  obsidian.rs
src/ui/: align_toolbar.rs  all_pages.rs  block_row.rs  embed.rs  game.rs  graph.rs  image.rs  journal.rs  links.rs  math.rs  mermaid.rs  mod.rs  month_cal.rs  page_view.rs  pdf_view.rs  properties_page.rs  property_editor.rs  search.rs  sidebar.rs  slash_menu.rs  tab_bar.rs  table_picker.rs
