[package]
name = "zorite"
version = "0.1.0"
edition = "2024"
description = "A local-first outliner and daily-journal note app (Logseq-style)."
license = "GPL-3.0-or-later"
authors = ["packetThrower"]
publish = false

[[bin]]
name = "zorite"
path = "src/main.rs"

[workspace]
members = ["crates/gpui-markdown", "crates/gpui-pdf", "crates/gpui-whiteboard"]
resolver = "2"

[dependencies]
# Our own markdown renderer (clickable wiki-links), a workspace crate.
gpui-markdown = { path = "crates/gpui-markdown" }

# Our own page-virtualized PDF viewer (pure-Rust hayro), a workspace crate.
# `markup` adds the text-extraction layer + highlight rendering (Logseq-style).
gpui-pdf = { path = "crates/gpui-pdf", features = ["markup", "search"] }

# Our own infinite-canvas whiteboard, a host-agnostic workspace crate.
gpui-whiteboard = { path = "crates/gpui-whiteboard" }

# Mermaid diagrams: a pure-Rust mermaid → SVG renderer (zed-industries — the
# same crate Zed's markdown preview uses; no JS/Node). We rasterize its SVG to a
# `gpui::RenderImage` via `cx.svg_renderer()` and cache it like a note image. Git
# dep (not on crates.io); pinned to Zed's known-good rev.
mermaid-rs-renderer = { git = "https://github.com/zed-industries/mermaid-rs-renderer", rev = "782b89a7da3f0e91e51f98d00a93acba679be6fb", default-features = false }

# SQLite backend. `bundled` compiles SQLite from source and links it
# statically into the binary — no system libsqlite3 dependency on any
# target, and no version skew between dev machines.
rusqlite = { version = "0.40", features = ["bundled"] }

# Local date for the daily-journal title (YYYY-MM-DD). `local-offset`
# enables `OffsetDateTime::now_local()` so "today" follows the user's
# timezone rather than UTC. Same dep etch341 uses.
time = { version = "0.3", features = ["local-offset"] }

log = "0.4"
env_logger = "0.11"

# User-supplied JSON themes (already in the dep graph via gpui-component).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- GUI stack — mirrors ~/git/etch341 exactly ---
#
# `gpui` / `gpui_platform` deliberately have NO rev. gpui-component's
# git tip pins gpui with no rev either, and Cargo only unifies two git
# deps of the same crate when their specs match — a rev here would
# duplicate the gpui graph. Reproducibility comes from Cargo.lock,
# seeded from etch341's known-good graph.
gpui = { git = "https://github.com/zed-industries/zed" }

# Per-platform backend. The Linux `wayland` / `x11` features are NOT
# default — without them `gpui::guess_compositor()` hits `unreachable!`
# inside a Wayland session before the first paint. Harmless on macOS /
# Windows.
gpui_platform = { git = "https://github.com/zed-industries/zed", features = [
    "font-kit",
    "wayland",
    "x11",
] }

# Widget library. Pinned to a git rev because the crates.io release
# targets a different gpui than our git pin; the git tip pins gpui with
# no rev so Cargo unifies it against ours.
gpui-component = { git = "https://github.com/longbridge/gpui-component", rev = "2d2524d89efc47270e9a0ee18f10fa72cd573eff" }

# Lucide icon SVGs. Without `.with_assets(Assets)` at startup, every
# gpui-component icon renders as an empty rect. Pin to the same rev so
# the icon set tracks the `IconName` enum in gpui-component.
gpui-component-assets = { git = "https://github.com/longbridge/gpui-component", rev = "2d2524d89efc47270e9a0ee18f10fa72cd573eff" }

# Parse `file://` URLs into filesystem paths correctly across platforms (Windows
# `file:///C:/…`, percent-decoding). Already in the tree via gpui.
url = "2"

# Decode + downscale note images to display resolution before handing gpui a
# GPU-ready `RenderImage` (see `images::ImageStore`). Pinned to gpui's `image`
# minor (0.25) so the `Frame` type unifies with `RenderImage::new`, matching the
# gpui-pdf crate.
image = "0.25"

# Embeds the Windows .exe icon (resources/icon.rc -> resources/icons/icon.ico)
# into the PE resource section via build.rs. `embed_resource::compile` is a
# no-op on macOS / Linux, so this build-dep is harmless off-Windows.
[build-dependencies]
embed-resource = "3"

# Release profile mirrors the references: smallest, fastest binary.
[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

# ───────────────────── Packaging (cargo-packager / cargo-wix) ─────────────────────
# Drives `cargo packager` (.app/.dmg, NSIS .exe, .deb, .AppImage) and `cargo wix`
# (.msi) in .github/workflows/release.yml. A normal `cargo build` ignores these.
[package.metadata.packager]
product-name = "Zorite"
identifier = "io.github.packetThrower.Zorite"
category = "Productivity"
copyright = "© 2026 packetThrower / zorite contributors"
homepage = "https://github.com/packetThrower/zorite"
authors = ["packetThrower"]
publisher = "packetThrower"
description = "A local-first outliner and daily-journal note app (Logseq-style)."
long-description = """
Zorite is a cross-platform (macOS + Windows + Linux) local-first daily-journal \
and outliner note app. Logseq-style: an infinite-scroll journal of daily pages \
plus linked [[wiki-link]] pages, written in Markdown and stored in a local SQLite \
database. Embed and annotate PDFs, drop in images, and search across everything — \
no cloud, no account; your notes stay on your machine.\
"""
before-packaging-command = "cargo build --release"
icons = ["resources/icons/icon.icns", "resources/icons/icon.png", "resources/icons/icon.ico"]

[package.metadata.packager.deb]
# Runtime libs for gpui's Wayland + X11 surface + font-kit. Without an explicit
# `depends`, a fresh install fails to launch with a missing-.so error. Keep in
# lockstep with the fpm --depends list in release.yml's .rpm step.
depends = [
  "libxkbcommon0",
  "libxkbcommon-x11-0",
  "libwayland-client0",
  "libwayland-cursor0",
  "libx11-6",
  "libxcb1",
  "libxcb-cursor0",
  "libxcb-randr0",
  "libxcb-render0",
  "libxcb-shape0",
  "libxcb-xfixes0",
  "libxcb-xkb1",
  "libfontconfig1",
  "libfreetype6",
]
# Desktop entry (launcher discovery) + hicolor icon.
files = { "packaging/linux/zorite.desktop" = "/usr/share/applications/zorite.desktop", "resources/icons/icon.png" = "/usr/share/icons/hicolor/512x512/apps/zorite.png" }

[package.metadata.packager.macos]
# Hand-curated Info.plist (single-instance launch, high-DPI, stable bundle id).
info-plist-path = "resources/Info.plist"
minimum-system-version = "11.0"
# Ad-hoc codesign (`-`) so Gatekeeper doesn't flag the bundle as "damaged".
# Not notarized — first launch is still the right-click -> Open path until an
# Apple Developer account lands.
signing-identity = "-"

# cargo-wix config for the per-arch .msi (built by `cargo wix` in release.yml, on
# stable tags only — MSI ProductVersion rejects alphanumeric prereleases).
[package.metadata.wix]
# Stable per-app GUID. MUST match the UpgradeCode in packaging/windows/wix/main.wxs.
# Distinct from every other packetThrower app. Never change once an installer ships.
upgrade-guid = "B73F422B-02A5-4E09-A278-E810B2F7B903"
include = ["packaging/windows/wix/main.wxs"]
