[package]
name = "gpui-editor"
version = "0.1.0"
edition = "2024"
description = "A from-scratch multi-line text editor for GPUI — the basis for Zorite's note editor (built on gpui's EntityInputHandler + text-shaping primitives, no gpui-component)."
license = "GPL-3.0-or-later"

[dependencies]
# Shared workspace spec (the root pins the rev) so Cargo unifies to one gpui.
gpui = { workspace = true }

# Grapheme-cluster boundaries for cursor movement, so an emoji / combining mark
# moves as a single unit (matches gpui's own input example).
unicode-segmentation = "1"

# Shared markdown-construct recognition (`gpui_markdown::syntax`): alert kinds,
# table styles, heading scales — so WYSIWYG and the reader can never drift
# apart on what a construct IS. The one sanctioned sibling-crate dependency
# (see AGENTS.md); rendering stays entirely this crate's own.
gpui-markdown = { path = "../gpui-markdown", default-features = false }

# The standalone demo needs a platform backend to open a real window (the `gpui`
# crate alone has no app entry point in this setup — it's split into
# `gpui_platform`, same as the host app). Shared workspace spec, one graph.
[dev-dependencies]
gpui_platform = { workspace = true }

# The demo wires the editor to the real OS spell checker (M6). Dev-only, so the
# editor crate itself stays host-agnostic and free of any OS-FFI dependency.
os-spellcheck = { path = "../os-spellcheck" }

# A runnable, standalone demo window: `cargo run -p gpui-editor --example demo`.
[[example]]
name = "demo"
