[package]
name = "gpui-markdown"
version = "0.1.0"
edition = "2024"
description = "Markdown rendering for GPUI with clickable wiki-links."
license = "GPL-3.0-or-later"

[dependencies]
# Shared workspace spec (the root pins the rev) so Cargo unifies to one gpui.
gpui = { workspace = true }
markdown = "1"
