[package]
name = "gpui-pdf"
version = "0.1.0"
edition = "2024"
description = "Page-virtualized PDF viewing for GPUI, via the pure-Rust hayro rasterizer."
license = "GPL-3.0-or-later"

[dependencies]
# Same git spec (no rev) as the workspace root so Cargo unifies to one gpui;
# the lock pins the actual revision.
gpui = { git = "https://github.com/zed-industries/zed" }

# Pure-Rust PDF rasterizer (no native library, no system-font dependency).
hayro = "0.7"

# Build `image::Frame`/`RgbaImage` for `gpui::RenderImage`. Pin to gpui's `image`
# minor (0.25) so the `Frame` type unifies with what `RenderImage::new` expects.
image = "0.25"

log = "0.4"
