[package]
name = "gpui-pdf"
version = "0.1.0"
edition = "2024"
description = "Page-virtualized PDF viewing for GPUI, via the pure-Rust hayro rasterizer."
license = "GPL-3.0-or-later"

[dependencies]
# Shared workspace spec (the root pins the rev) so Cargo unifies to one gpui.
gpui = { workspace = true }

# Pure-Rust PDF rasterizer (no native library, no system-font dependency).
hayro = "0.7"

# Build `image::Frame`/`RgbaImage` for `gpui::RenderImage`. Pin to gpui's `image`
# minor (0.25) so the `Frame` type unifies with what `RenderImage::new` expects.
image = "0.25"

log = "0.4"

# Geometry for the text-extraction layer (markup feature only). Pin to the kurbo
# version hayro uses so `Affine`/`BezPath` unify with hayro's `Device` trait.
kurbo = { version = "0.13", optional = true }

[features]
default = []
# Text-anchored markup substrate: extract a page's text + per-glyph rectangles by
# running a custom hayro `Device` over it (no rasterization), so a host can locate a
# quote on the page and draw a highlight over it. Coordinates are normalized (0..1)
# so they're zoom/DPI-independent. Pulls only `kurbo` (already in the tree via
# hayro) — no heavyweight PDF library. Off by default.
markup = ["dep:kurbo"]

# Find-in-PDF: a search box over the text layer with match highlighting and
# next/prev navigation (scroll-to + emphasis). Builds on `markup` — it shares the
# text-extraction layer rather than duplicating it — so enabling `search` also
# enables `markup`. Off by default.
search = ["markup"]

# Verification helper: `cargo run -p gpui-pdf --example extract_text --features markup
# -- <file.pdf> [page]` prints a page's extracted text.
[[example]]
name = "extract_text"
required-features = ["markup"]
