[package]
name = "gpui-pdf"
version = "0.1.0"
edition = "2024"
description = "Page-virtualized PDF viewing for GPUI, via the pure-Rust hayro rasterizer."
license = "GPL-3.0-or-later"

[dependencies]
# Shared workspace spec (the root pins the rev) so Cargo unifies to one gpui.
gpui = { workspace = true }

# Pure-Rust PDF rasterizer (no native library, no system-font dependency).
hayro = "0.7"

# Build `image::Frame`/`RgbaImage` for `gpui::RenderImage`. Pin to gpui's `image`
# minor (0.25) so the `Frame` type unifies with what `RenderImage::new` expects.
image = "0.25"

log = "0.4"

# Geometry for the text-extraction layer (markup feature only). Pin to the kurbo
# version hayro uses so `Affine`/`BezPath` unify with hayro's `Device` trait.
kurbo = { version = "0.13", optional = true }

# PDF *writing* for the forms feature only: normalize form-field appearance
# streams before hayro renders (hayro reads; lopdf rewrites). Pure Rust, MIT.
lopdf = { version = "0.44", optional = true, default-features = false }

[features]
default = []
# Text-anchored markup substrate: extract a page's text + per-glyph rectangles by
# running a custom hayro `Device` over it (no rasterization), so a host can locate a
# quote on the page and draw a highlight over it. Coordinates are normalized (0..1)
# so they're zoom/DPI-independent. Pulls only `kurbo` (already in the tree via
# hayro) — no heavyweight PDF library. Off by default.
markup = ["dep:kurbo"]

# Find-in-PDF: a search box over the text layer with match highlighting and
# next/prev navigation (scroll-to + emphasis). Builds on `markup` — it shares the
# text-extraction layer rather than duplicating it — so enabling `search` also
# enables `markup`. Off by default.
search = ["markup"]

# AcroForm display correctness: normalize form-field appearances before
# rendering — resolve checkbox/radio state-dict `/AP` through `/AS` into the
# direct stream hayro can draw, and synthesize an appearance for a valued text
# field that has none (the NeedAppearances case). Pulls `lopdf`. Off by default.
forms = ["dep:lopdf"]

# Verification helper: `cargo run -p gpui-pdf --example extract_text --features markup
# -- <file.pdf> [page]` prints a page's extracted text.
[[example]]
name = "extract_text"
required-features = ["markup"]

# Verification helper: reports a PDF's form-widget shapes + whether the forms
# normalization pass changes anything.
[[example]]
name = "forms_check"
required-features = ["forms"]
