[package]
name = "gpui-whiteboard"
version = "0.1.0"
edition = "2024"
description = "An infinite, pannable/zoomable whiteboard canvas for GPUI."
license = "GPL-3.0-or-later"

[dependencies]
# Shared workspace spec (the root pins the rev) so Cargo unifies to one gpui.
gpui = { workspace = true }

# The board model (`Scene` + camera, and elements once drawing lands) is owned
# and (de)serialized by this crate, so the host can persist it as an opaque
# JSON string in its own store.
serde = { version = "1", features = ["derive"] }
serde_json = "1"

log = "0.4"

# Glyph outlines for on-canvas text: text is rendered as vector paths (not gpui
# overlay glyphs) so it rotates + scales with the camera and shapes, and so the
# host can supply a custom/user-uploaded face. Pinned to gpui's version so the
# lockfile unifies to a single copy. The default face (JetBrains Mono, OFL) is
# bundled under `assets/`.
ttf-parser = "0.25"
