[package]
name = "ratex-gpui"
version = "0.1.0"
edition = "2024"
description = "A structural (MathQuill-style) math editor for GPUI, built on the RaTeX typesetting engine."
license = "GPL-3.0-or-later"

[dependencies]
# RaTeX typesetting engine — crates.io, GUI-agnostic (parse → layout → render).
# `editor::model` serializes to LaTeX; `editor::geometry` lays it out and reads box rects.
ratex-parser = "0.1"
ratex-layout = "0.1"

# Same git spec (no rev) as the workspace root + gpui-editor, so Cargo unifies to one
# gpui; the lockfile pins the actual revision. NOT crates.io 0.2 — Zed doesn't keep that
# current. Used by the `render` + `editor::view` modules (landing in later milestones).
gpui = { git = "https://github.com/zed-industries/zed" }
