# Throwaway spike: does RaTeX's layout expose enough structure + geometry to
# drive a structural (Casio-style) math editor? Its own [workspace] table keeps
# it OUT of zorite's workspace, so `cargo build` at the repo root ignores it and
# its lockfile stays separate.
[package]
name = "ratex-probe"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[dependencies]
ratex-parser = "0.1.9"
ratex-layout = "0.1.9"
ratex-types = "0.1.9"
ratex-render = { version = "0.1.9", features = ["embed-fonts"] }
gpui = { version = "0.2", features = ["runtime_shaders"] }
